revised on footer templates wedding

--- a/templates/template_wedding_10/index.html
+++ b/templates/template_wedding_10/index.html
@@ -635,7 +635,7 @@
         </div>
         <!-- Footer -->
         <footer>
-            <div class="container-fluid pt-m-10p pb-m-10p pl-m-10p pr-m-10p pt-lg-40 pb-lg-40 pl-lg-5p pr-lg-5p">
+            <div class="container-fluid pt-m-10p pb-m-10p pl-m-10p pr-m-10p py-lg-4 pl-lg-5p pr-lg-5p">
                 <div class="row">
                     <div class="order-2 order-lg-1 col-12 mtext-center col-lg-8">
                         <p>All Rights Reserved © This website is made by <b>Reservasi Dulu</b></p>
