--- a/templates/template_wedding_3/index.html
+++ b/templates/template_wedding_3/index.html
@@ -337,8 +337,17 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="pt-lg-1p pb-lg-1p text-center">
-            <p class="mb-lg-0">All Rights Reserved © This website is made by Reservasi Dulu</p>
+        <footer class="py-lg-4">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-10 pl-lg-5">
+                        <p class="mb-lg-0">All Rights Reserved © This website is made by Reservasi Dulu</p>
+                    </div>
+                    <div class="col-lg-2 pr-lg-5">
+                        <a class="button-default" href="">Create a Site</a>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
     <!-- Features JS -->
