--- a/templates/template_wedding_8/index.html
+++ b/templates/template_wedding_8/index.html
@@ -324,7 +324,7 @@
         </section>
         <!-- Footer -->
         <footer>
-            <div class="container-fluid pt-m-10p pb-m-15p pl-m-10p pr-m-10p pt-lg-30 pb-lg-30 pl-lg-5p pr-lg-5p">
+            <div class="container-fluid pt-m-10p pb-m-15p pl-m-10p pr-m-10p py-lg-4 pl-lg-5p pr-lg-5p">
                 <div class="row">
                     <div class="col-12 mb-m-10p mtext-center col-lg-8">
                         <p><b>All Rights Reserved</b> © This website is made by Reservasi Dulu</p>
