--- a/templates/template_wedding_6/index.html
+++ b/templates/template_wedding_6/index.html
@@ -648,7 +648,7 @@
                     </section>
                     <!-- Footer -->
                     <footer>
-                        <div class="container-fluid pt-m-10p pb-m-15p pl-m-10p pr-m-10p pt-lg-15 pb-lg-15 pl-lg-5p pr-lg-5p">
+                        <div class="container-fluid pt-m-10p pb-m-15p pl-m-10p pr-m-10p py-lg-4 pl-lg-5p pr-lg-5p">
                             <div class="row">
                                 <div class="order-2 order-lg-1 col-12 mb-m-0 mtext-center col-lg-8">
                                     <p>All Rights Reserved © This website is made by Reservasi Dulu</p>
