--- a/templates/template_wedding_9/index.html
+++ b/templates/template_wedding_9/index.html
@@ -490,7 +490,7 @@
         </section>
         <!-- Footer -->
         <footer>
-            <div class="container-fluid pt-m-10p pb-m-10p pl-m-10p pr-m-10p pt-lg-30 pb-lg-30 pl-lg-5p pr-lg-5p">
+            <div class="container-fluid pt-m-10p pb-m-10p pl-m-10p pr-m-10p py-lg-4 pl-lg-5p pr-lg-5p">
                 <div class="row">
                     <div class="order-2 order-lg-1 col-12 mb-m-0 mtext-center col-lg-8">
                         <p>All Rights Reserved © This website is made by Reservasi Dulu</p>
