revised on footer templates birthday

--- a/templates/template_birthday_1/wishlist.html
+++ b/templates/template_birthday_1/wishlist.html
@@ -154,7 +154,7 @@
         </section>
         <!-- FOOTER -->
         <footer>
-            <div class="container-fluid pt-lg-30 pb-lg-30 pl-lg-5p pr-lg-5p bg-aqua">
+            <div class="container-fluid py-lg-4 pl-lg-5p pr-lg-5p bg-aqua">
                 <div class="row">
                     <div class="order-2 order-lg-1 col-lg-8 font-white">
                         <p>All Rights Reserved © This website is made by <b>Reservasi Dulu</b></p>
