--- a/templates/template_birthday_3/index.html
+++ b/templates/template_birthday_3/index.html
@@ -248,7 +248,7 @@
     </section>
     <!-- Footer -->
     <footer>
-        <div class="container-fluid pl-m-5p pr-m-5p pl-lg-15p pr-lg-15p">
+        <div class="container-fluid py-lg-4 pl-m-5p pr-m-5p pl-lg-15p pr-lg-15p">
             <div class="row">
                 <div class="col-8 col-lg-8 pt-lg-5px">
                     <p>All Rights Reserved This website is made by Reservasi Dulu</p>
