--- a/templates/template_birthday_2/index.html
+++ b/templates/template_birthday_2/index.html
@@ -252,7 +252,7 @@
         </div>
         </div>
       </div>
-    <div class="container-fluid py-3 footer bg-pink">
+    <div class="container-fluid py-3 py-lg-4 footer bg-pink">
       <div class="row">
         <div class="col-lg-1 offset-lg-3 col-1">
           <p class="text-gray mb-0">
